<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>br.com.convencao</groupId>
  <artifactId>convencao</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>war</packaging>
  
 	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
  
	<dependencies>	
		<!-- Primefaces -->
		<!-- https://mvnrepository.com/artifact/org.primefaces/primefaces -->
		<!-- 15/01/2020 - Atualizado de 6.1 para 6.2  -->
		<!-- 16/01/2020 - Atualizado de 6.2 para 7.0  -->
		<!-- 23/07/2020 - TENTATIVA para Atualizar de 7.0 para 8.0  -->
		<dependency>
		    <groupId>org.primefaces</groupId>
		    <artifactId>primefaces</artifactId>
		    <version>8.0</version>
		    <scope>compile</scope>
		</dependency>

		<!-- Tema bootstrap do Primefaces -->
		<!-- https://mvnrepository.com/artifact/org.primefaces.themes/bootstrap -->
		<dependency>
		    <groupId>org.primefaces.themes</groupId>
		    <artifactId>bootstrap</artifactId>
		    <version>1.0.10</version>
		    <scope>compile</scope>
		</dependency>
		
		<!-- JSF 2.3 -->
		<!-- https://mvnrepository.com/artifact/org.glassfish/javax.faces (versão anterior 2.3.0-m11) -->
		<!-- 14/01/2020 - Atualizado de 2.3.2 para 2.4.0  -->
		<dependency>
		    <groupId>org.glassfish</groupId>
		    <artifactId>javax.faces</artifactId>
		    <version>2.4.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.omnifaces/omnifaces -->
		<!-- 15/01/2020 - Atualizado de 2.5.1 para 3.4.1 -->
		<!-- 17/01/2020 - Retornado de 3.4.1 para 3.2 - Motivo: Deu erro de 'PrimeResourceHandler is duplicated'  -->
		<!-- 12/09/2020 - Atualizado de 3.2 para 3.7.1 -->
		<dependency>
		    <groupId>org.omnifaces</groupId>
		    <artifactId>omnifaces</artifactId>
		    <version>3.7.1</version>
		    <scope>compile</scope>
		</dependency>
				 
		<!-- JSF 2 -->	
		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api (versão anterior 3.1.0) -->
		<!-- 14/01/2020 - Atualizado de 4.0.0 para 4.0.1 -->
		<dependency>
		    <groupId>javax.servlet</groupId>
		    <artifactId>javax.servlet-api</artifactId>
		    <version>4.0.1</version>
		    <scope>provided</scope>
		</dependency>
				
		<!-- MySql -->
		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
		<!-- 02/04/2020 - Atualizado de 5.1.34 para 8.0.19 -->
		<!-- 10/09/2020 - Atualizado de 5.0.19 para 8.0.30 -->
		<dependency>
		    <groupId>mysql</groupId>
		    <artifactId>mysql-connector-java</artifactId>
		    <version>8.0.30</version>
		    <scope>compile</scope>
		</dependency>
		
		<!-- JPA - Hibernate 1 -->
		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
		<!-- 15/06/2020 - Atualizado de 5.3.4.Final para 6.1.5.Final -->
		<dependency>
		    <groupId>org.hibernate</groupId>
		    <artifactId>hibernate-validator</artifactId>
		    <version>6.1.5.Final</version>
		    <scope>compile</scope>
		</dependency>
		
		<!-- JPA - Hibernate 2 -->
		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
		<!-- 15/06/2020 - Atualizado de 5.2.5.Final para 5.4.17.Final -->
		<!-- 17/09/2020 - Atualizado de 5.4.17.Final para 5.4.21.Final -->
		<!-- 19/02/2022 - Atualizado de 5.4.21.Final para 5.4.24.Final  Ajustado para 5.4.24 devido vulnerabilidade registrada-->
		<dependency>
		    <groupId>org.hibernate</groupId>
		    <artifactId>hibernate-core</artifactId>
		    <version>5.4.24.Final</version>
		    <scope>compile</scope>
		</dependency>
		
		<!-- JPA - Hibernate 3 -->
		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
		<!-- 15/06/2020 - Atualizado de 5.2.5.Final para 5.4.17.Final -->
		<!-- 17/09/2020 - Atualizado de 5.4.17.Final para 5.4.21.Final -->
		<!-- 19/02/2022 - Atualizado de 5.4.21.Final para 5.4.24.Final  Ajustado para 5.4.24 devido vulnerabilidade registrada-->
		<dependency>
		    <groupId>org.hibernate</groupId>
		    <artifactId>hibernate-entitymanager</artifactId>
		    <version>5.4.24.Final</version>
		    <scope>compile</scope>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.mchange/c3p0 -->
		<!-- 03/05/2019 -  Atualizado de 0.9.5.2 para 0.9.5.4 -->
		<!-- 27/01/2020 -  Atualizado de 0.9.5.4 para 0.9.5.5 -->
		<dependency>
		    <groupId>com.mchange</groupId>
		    <artifactId>c3p0</artifactId>
		    <version>0.9.5.5</version>
		</dependency>
		
		<!-- CDI -->
		<!-- https://mvnrepository.com/artifact/org.jboss.weld.servlet/weld-servlet -->
		<!-- 15/01/2020 - Atualizado de 2.4.5.Final para 2.4.8.Final -->
		<dependency>
		    <groupId>org.jboss.weld.servlet</groupId>
		    <artifactId>weld-servlet</artifactId>
		    <version>2.4.8.Final</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.jboss/jandex -->
		<!-- 12/09/2020 - Atualizado de 2.0.3.Final para 2.2.1.Final-->
		<dependency>
		    <groupId>org.jboss</groupId>
		    <artifactId>jandex</artifactId>
		    <version>2.2.1.Final</version>
		</dependency>
				
		<!-- Junit para Testes -->
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<!-- 06/09/2020 - Atualizado de 4.12 para 4.13-->
		<!-- 15/10/2020 - Atualizado de 4.13 para 4.13.1-->
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.13.1</version>
		    <scope>test</scope>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
		<!-- 06/09/2020 - Atualizado de 2.7 para 2.13.3-->
		<!-- 14/12/2021 - Atualizado de 2.13.3 para 2.16.0-->
		<!-- 20/12/2021 - Atualizado de 2.16.0 para 2.17.0-->
		<!-- 05/01/2022 - Atualizado de 2.17.0 para 2.17.1-->
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-api</artifactId>
		    <version>2.17.1</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<!-- 06/09/2020 - Atualizado de 2.7 para 2.13.3-->
		<!-- 14/12/2021 - Atualizado de 2.13.3 para 2.16.0-->
		<!-- 20/12/2021 - Atualizado de 2.16.0 para 2.17.0-->
		<!-- 05/01/2022 - Atualizado de 2.17.0 para 2.17.1-->
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-core</artifactId>
		    <version>2.17.1</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-jcl -->
		<!-- 06/09/2020 - Atualizado de 2.7 para 2.13.3-->
		<!-- 14/12/2021 - Atualizado de 2.13.3 para 2.16.0-->
		<!-- 20/12/2021 - Atualizado de 2.16.0 para 2.17.0-->
		<!-- 05/01/2022 - Atualizado de 2.17.0 para 2.17.1-->
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-jcl</artifactId>
		    <version>2.17.1</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
		<dependency>
		    <groupId>commons-logging</groupId>
		    <artifactId>commons-logging</artifactId>
		    <version>1.2</version>
		    <scope>compile</scope>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<!-- 29/08/2020 - Atualizado de 3.5.1 para 3.11-->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>3.11</version>
		    <scope>compile</scope>
		</dependency>
	
		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
		<!-- 30/12/2019 - Atualizado versão de 6.4.1 para 6.11.0 - Motivo: jacson-core com versão superior à 2.6.7 para atender aws-java-sdk-s3 -->
		<dependency>
		    <groupId>net.sf.jasperreports</groupId>
		    <artifactId>jasperreports</artifactId>
		    <version>6.11.0</version>
		</dependency>
	
		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports-fonts -->
		<dependency>
		    <groupId>net.sf.jasperreports</groupId>
		    <artifactId>jasperreports-fonts</artifactId>
		    <version>6.0.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
		<!-- 20/10/2018 - Atualizado de 4.2.3.RELEASE para 5.1.1.RELEASE -->
		<!-- 23/12/2018 - Atualizado de 5.1.1.RELEASE para 5.1.2.RELEASE -->
		<!-- 03/05/2019 - Atualizado de 5.1.2.RELEASE para 5.1.5.RELEASE -->
		<!-- 22/08/2020 - Atualizado de 5.1.5.RELEASE para 5.3.4.RELEASE -->
		<!-- 21/10/2021 - Atualizado de 5.3.4.RELEASE para 5.5.3 -->
		<!-- 10/09/2022 - Atualizado de 5.5.3 para 5.7.3 -->
		<!-- 16/01/2023 - Atualizado de 5.7.3 para 5.8.1 -->
		<dependency>
		    <groupId>org.springframework.security</groupId>
		    <artifactId>spring-security-core</artifactId>
		    <version>5.8.1</version>
		</dependency>
				
		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
		<!-- 20/10/2018 - Atualizado de 4.2.3.RELEASE para 5.1.1.RELEASE -->
		<!-- 23/12/2018 - Atualizado de 5.1.1.RELEASE para 5.1.2.RELEASE -->
		<!-- 03/05/2019 - Atualizado de 5.1.2.RELEASE para 5.1.5.RELEASE -->
		<!-- 22/08/2020 - Atualizado de 5.1.5.RELEASE para 5.3.4.RELEASE -->
		<!-- 21/10/2021 - Atualizado de 5.3.4.RELEASE para 5.5.3 -->
		<!-- 10/09/2022 - Atualizado de 5.5.3 para 5.7.3 -->
		<!-- 16/01/2023 - Atualizado de 5.7.3 para 5.8.1 -->
		<dependency>
		    <groupId>org.springframework.security</groupId>
		    <artifactId>spring-security-web</artifactId>
		    <version>5.8.1</version>
		</dependency>
				
		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
		<!-- 20/10/2018 - Atualizado de 4.2.3.RELEASE para 5.1.1.RELEASE -->
		<!-- 23/12/2018 - Atualizado de 5.1.1.RELEASE para 5.1.2.RELEASE -->
		<!-- 03/05/2019 - Atualizado de 5.1.2.RELEASE para 5.1.5.RELEASE -->
		<!-- 22/08/2020 - Atualizado de 5.1.5.RELEASE para 5.3.4.RELEASE -->
		<!-- 22/08/2020 - Atualizado de 5.3.4.RELEASE para 5.4.9 -->
		<!-- 16/01/2023 - Atualizado de 5.4.9 para 5.8.1 -->
		<dependency>
		    <groupId>org.springframework.security</groupId>
		    <artifactId>spring-security-config</artifactId>
		    <version>5.8.1</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
		<!-- Referencia para uso: https://medium.com/collabcode/projeto-lombok-escrevendo-menos-c%C3%B3digo-em-java-8fc87b379209 -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.20</version>
			<scope>provided</scope>
		</dependency>
						
	</dependencies>
  
  	<build>
		<finalName>confrateres</finalName>
		<plugins>
			<plugin>
		    	<groupId>org.apache.maven.plugins</groupId>
		    	<artifactId>maven-war-plugin</artifactId>
		    	<version>3.3.2</version>
			</plugin>
			<plugin>
	      	<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			   	<version>3.9.0</version>
			   	<configuration>
					<source>11</source>
        			<target>11</target>	   
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<repositories>
		<repository>
			<id>prime-repo</id>
			<name>PrimeFaces Maven Repository</name>
			<url>http://repository.primefaces.org</url>
			<layout>default</layout>
		</repository>
	</repositories>
</project>